Java 9 method description changes and sonar issue fix